external/lib25519-20241004/build/arm64/unified/fe25519mulS/1/shared/result-compile-fe25519_mul
fe25519_mul.S:119:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
